change default settings

--- a/EmailRabbitMq.Sender/appsettings.json
+++ b/EmailRabbitMq.Sender/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "server": "aaa",
-  "port": "bbb",
-  "user": "ccc",
-  "password": "ddd"
+  "server": "",
+  "port": "123",
+  "user": "",
+  "password": ""
 }
